feat: paginator WIP
